k8s/ingress/homework-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: homework

spec:
  ingressClassName: nginx

  rules:
    - host: homework.local

      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80


          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
